Add async data base seeder