@@ -5,14 +5,17 @@ import com.hyperspacegroup.fomalhaut.core.model.dao.LogRepository;
 import org.apache.logging.log4j.LogManager;
 import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Service;
+import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
 
 import java.time.LocalDateTime;
-import java.util.List;
+import java.util.Arrays;
 
 @Profile("dev")
 @Service
 public class DataBaseSeeder {
     private final LogRepository logRepository;
+
     public DataBaseSeeder(LogRepository logRepository) {
         this.logRepository = logRepository;
 
@@ -20,17 +23,18 @@ public class DataBaseSeeder {
     }
 
     private void deleteAllAndSeedDataBase() {
-        this.deleteAll();
-        this.seedDataBase();
+        this.deleteAll()
+                .then(this.seedDataBase())
+                .doOnTerminate(() -> LogManager.getLogger(this.getClass()).warn("Database emptied"))
+                .subscribe();
     }
 
-    private void deleteAll() {
-        this.logRepository.deleteAll();
-        LogManager.getLogger(this.getClass()).warn("------- Delete All -----------");
+    private Mono<Void> deleteAll() {
+        return this.logRepository.deleteAll()
+                .doOnSuccess(v -> LogManager.getLogger(this.getClass()).warn("Deleted all existing logs."));
     }
 
     private void seedDataBase() {
-        LogManager.getLogger(this.getClass()).warn("------- Initial Load from JAVA -----------");
         Log[] logs = {
                 Log.builder().title("Launch Successful").body("The satellite has successfully reached orbit.").dateTime(LocalDateTime.now().minusHours(12)).build(),
                 Log.builder().title("Systems Check").body("All onboard systems are functioning within normal parameters.").dateTime(LocalDateTime.now().minusHours(10)).build(),
@@ -40,8 +44,9 @@ public class DataBaseSeeder {
                 Log.builder().title("Anomaly Detected").body("Minor deviation in thermal control system detected, monitoring closely.").dateTime(LocalDateTime.now().minusHours(2)).build(),
                 Log.builder().title("Mission Status: Operational").body("The satellite is fully operational and carrying out its mission objectives.").dateTime(LocalDateTime.now()).build()
         };
-        this.logRepository.saveAll(List.of(logs));
-        LogManager.getLogger(this.getClass()).warn("        ------- logs");
+        this.logRepository.saveAll(Flux.fromIterable(Arrays.asList(logs)))
+                .doOnComplete(() -> LogManager.getLogger(this.getClass()).warn("---------- logs"))
+                .doOnError(error -> LogManager.getLogger(this.getClass()).error("Error saving logs", error))
+                .subscribe();
     }
 }
-
